Use "go/parser" to parse enum values Use 3 new examples Expanded documentation Improved Makefile

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
-go-genums
-examples/intEnums/intEnums
-examples/stringEnums/stringEnums
+genums
+examples/colorEnum/colorEnum
+examples/dayEnum/dayEnum
+examples/carEnum/carEnum
